Fix: JavaFx unsupported java21 methods